fix(init):初始化部分样式

--- a/src/theme-chalk/button.scss
+++ b/src/theme-chalk/button.scss
@@ -177,7 +177,7 @@
     }
   }
 
-  @each $size in (medium, small, mini) {
+  @each $size in (large, medium, small, mini) {
     @include m($size) {
       min-height: map.get($input-height, $size);
 
