--- a/src/theme-chalk/common/var.scss
+++ b/src/theme-chalk/common/var.scss
@@ -32,6 +32,7 @@ $colors: map.deep-merge(
     ),
     'info': (
       'base': #A9A9A9,
+      'header': #F9FAFE,
     ),
   ),
   $colors
@@ -85,9 +86,10 @@ $text-color: () !default;
 $text-color: map.merge(
   (
     'primary': #303133,
-    'regular': #606266,
+    'regular': #4B4B4B,
     'secondary': #909399,
     'placeholder': #c0c4cc,
+    'header': #202020,
   ),
   $text-color
 );
@@ -95,9 +97,9 @@ $text-color: map.merge(
 $border-color: () !default;
 $border-color: map.merge(
   (
-    'base': #dcdfe6,
+    'base': #E7E7E7,
     'light': #e4e7ed,
-    'lighter': #ebeef5,
+    'lighter': #EDEDED,
     'extra-light': #f2f6fc,
   ),
   $border-color
@@ -118,8 +120,9 @@ $border-base: $border-width-base $border-style-base
 $border-radius: () !default;
 $border-radius: map.merge(
   (
-    'base': 0px,
-    'small': 0px,
+    'large': 2px,
+    'base': 2px,
+    'small': 2px,
     'round': 20px,
     'circle': 100%,
   ),
@@ -172,9 +175,9 @@ $checkbox: map.merge(
     'font-size': 14px,
     'font-weight': var(--el-font-weight-primary),
     'text-color': var(--el-text-color-regular),
-    'input-height': 14px,
-    'input-width': 14px,
-    'border-radius': var(--el-border-radius-small),
+    'input-height': 16px,
+    'input-width': 16px,
+    'border-radius': 2px,
     'bg-color': var(--el-color-white),
     'input-border': var(--el-border-base),
     'disabled-border-color': var(--el-border-color-base),
@@ -185,8 +188,8 @@ $checkbox: map.merge(
     'disabled-checked-icon-color': var(--el-text-color-placeholder),
     'checked-text-color': var(--el-color-primary),
     'checked-input-border-color': var(--el-color-primary),
-    'checked-bg-color': var(--el-color-primary),
-    'checked-icon-color': var(--el-fill-base),
+    'checked-bg-color': var(--el-color-white),
+    'checked-icon-color': var(--el-color-primary),
     'input-border-color-hover': var(--el-color-primary),
   ),
   $checkbox
@@ -210,8 +213,8 @@ $radio: map.merge(
     'font-size': var(--el-font-size-base),
     'text-color': var(--el-text-color-regular),
     'font-weight': var(--el-font-weight-primary),
-    'input-height': 14px,
-    'input-width': 14px,
+    'input-height': 16px,
+    'input-width': 16px,
     'input-border-radius': var(--el-border-radius-circle),
     'input-bg-color': var(--el-color-white),
     'input-border': var(--el-border-base),
@@ -261,7 +264,7 @@ $radio-checked: map.merge(
   (
     'text-color': var(--el-color-primary),
     'input-border-color': var(--el-color-primary),
-    'icon-color': var(--el-color-primary),
+    'icon-color': var(--el-color-white),
   ),
   $radio-checked
 );
@@ -305,7 +308,7 @@ $select: map.merge(
     'disabled-border': var(--el-disabled-border-color),
     'font-size': var(--el-font-size-base),
     'close-hover-color': var(--el-text-color-secondary),
-    'input-color': var(--el-text-color-placeholder),
+    'input-color': var(--el-text-color-regular),
     'multiple-input-color': var(--el-text-color-regular),
     'input-focus-border-color': var(--el-color-primary),
     'input-font-size': 14px,
@@ -318,7 +321,7 @@ $select-option: map.merge(
   (
     'text-color': var(--el-text-color-regular),
     'disabled-color': var(--el-text-color-placeholder),
-    'height': 34px,
+    'height': 32px,
     'hover-background': var(--el-bg-color),
     'selected-text-color': var(--el-color-primary),
   ),
@@ -431,7 +434,7 @@ $input: map.merge(
     'text-color': var(--el-text-color-regular),
     'border': var(--el-border-base),
     'border-color': var(--el-border-color-base),
-    'border-radius': var(--el-border-radius-base),
+    'border-radius': var(--el-border-radius-large),
     'bg-color': var(--el-color-white),
     'icon-color': var(--el-text-color-placeholder),
     'placeholder-color': var(--el-text-color-placeholder),
@@ -470,7 +473,7 @@ $input-height: map.merge(
     'default': 40px,
     'medium': 36px,
     'small': 32px,
-    'mini': 28px,
+    'mini': 24px,
   ),
   $input-height
 );
@@ -565,6 +568,7 @@ $button-text-color: () !default;
 $button-font-size: () !default;
 $button-font-size: map.merge(
   (
+    'large': var(--el-font-size-base, map.get($font-size, 'base')),
     'default': var(--el-font-size-base, map.get($font-size, 'base')),
     'medium': var(--el-font-size-base, map.get($font-size, 'base')),
     'small': 12px,
@@ -578,8 +582,8 @@ $button-border-radius: map.merge(
   (
     'default': var(--el-border-radius-base),
     'medium': var(--el-border-radius-base),
-    'small': calc(var(--el-border-radius-base) - 1px),
-    'mini': calc(var(--el-border-radius-base) - 1px),
+    'small':var(--el-border-radius-base),
+    'mini': var(--el-border-radius-base) - 1px,
   ),
   $button-border-radius
 );
@@ -587,10 +591,11 @@ $button-border-radius: map.merge(
 $button-padding-vertical: () !default;
 $button-padding-vertical: map.merge(
   (
+    'large': 16px,
     'default': 12px,
     'medium': 10px,
     'small': 9px,
-    'mini': 7px,
+    'mini': 5px,
   ),
   $button-padding-vertical
 );
@@ -598,6 +603,7 @@ $button-padding-vertical: map.merge(
 $button-padding-horizontal: () !default;
 $button-padding-horizontal: map.merge(
   (
+    'large': 20px,
     'default': 20px,
     'medium': 20px,
     'small': 15px,
@@ -647,10 +653,10 @@ $table: map.merge(
     'border-color': var(--el-border-color-lighter),
     'border': 1px solid var(--el-table-border-color),
     'text-color': var(--el-text-color-regular),
-    'header-text-color': var(--el-text-color-secondary),
+    'header-text-color': var(--el-text-color-header),
     'row-hover-bg-color': var(--el-bg-color),
     'current-row-bg-color': var(--el-color-primary-light-9),
-    'header-bg-color': var(--el-color-white),
+    'header-bg-color': map.get($colors, 'info', 'header'),
     'fixed-box-shadow': 0 0 10px rgba(0, 0, 0, 0.12),
     'bg-color': var(--el-color-white),
     'tr-bg-color': var(--el-color-white),
@@ -666,6 +672,7 @@ $pagination: map.merge(
   (
     'font-size': 13px,
     'bg-color': var(--el-color-white),
+    'border-color': var(--el-border-color-base),
     'text-color': var(--el-text-color-primary),
     'border-radius': 3px,
     'button-color': var(--el-text-color-primary),
