--- a/src/theme-chalk/button.scss
+++ b/src/theme-chalk/button.scss
@@ -31,9 +31,11 @@
   transition: 0.1s;
   font-weight: var(--el-button-font-weight);
   user-select: none;
-  min-width: 80px;
 
   // 复写type=primary
+  &:not(.is-circle) {
+    min-width: 80px;
+  }
   &.el-button--primary:not(.is-plain,.is-disabled){
     border: none;
     background: linear-gradient(90deg, #78C2FF 0%, #36A4FF 100%);
