--- a/src/theme-chalk/reset.scss
+++ b/src/theme-chalk/reset.scss
@@ -1,8 +1,10 @@
 @use 'common/var' as *;
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB',
-    'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+  // font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB',
+  //   'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+  font-family: 'PingFang SC', 'Hiragino Sans GB',
+    'Microsoft YaHei', '微软雅黑', Arial, sans-serif, 'Helvetica Neue', Helvetica;
   font-weight: 400;
   font-size: var(--el-font-size-base);
   color: $color-black;
