--- a/src/theme-chalk/step.scss
+++ b/src/theme-chalk/step.scss
@@ -25,15 +25,22 @@
   @include e(head) {
     position: relative;
     width: 100%;
+    font-size: 0;
 
     @include when(process) {
       color: var(--el-text-color-primary);
       border-color: var(--el-text-color-primary);
+      @include e(icon-inner){
+        font-size: 0;
+      }
     }
 
     @include when(wait) {
       color: var(--el-text-color-placeholder);
       border-color: var(--el-text-color-placeholder);
+      @include e(icon-inner){
+        font-size: 0;
+      }
     }
 
     @include when(success) {
@@ -60,7 +67,7 @@
     align-items: center;
     width: 24px;
     height: 24px;
-    font-size: 14px;
+    font-size: 12px;
     box-sizing: border-box;
     background: $color-white;
     transition: 0.15s ease-out;
@@ -80,9 +87,9 @@
     display: inline-block;
     user-select: none;
     text-align: center;
-    font-weight: bold;
     line-height: 1;
     color: inherit;
+    // font-size: 0;
 
     &[class*='#{$namespace}-icon']:not(.is-status) {
       font-size: 25px;
@@ -98,7 +105,9 @@
   @include e(line) {
     position: absolute;
     border-color: inherit;
-    background-color: var(--el-text-color-placeholder);
+    // background-color: var(--el-text-color-placeholder);
+    border-style: dashed;
+    border-width: 1px;
   }
 
   @include e(line-inner) {
@@ -118,11 +127,11 @@
   }
 
   @include e(title) {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 38px;
 
     @include when(process) {
-      font-weight: bold;
+      // font-weight: bold;
       color: var(--el-text-color-primary);
     }
 
@@ -175,15 +184,17 @@
     display: inline-block;
 
     @include e(line) {
-      height: 2px;
+      height: 0;
       top: 11px;
       left: 0;
       right: 0;
+      border-bottom: none;
     }
   }
 
   @include when(vertical) {
     display: flex;
+    // min-height: 70px;
 
     @include e(head) {
       flex-grow: 0;
@@ -201,7 +212,7 @@
     }
 
     @include e(line) {
-      width: 2px;
+      width: 0;
       top: 0;
       bottom: 0;
       left: 11px;
@@ -310,6 +321,37 @@
     @include pseudo(last-of-type) {
       @include e(arrow) {
         display: none;
+      }
+    }
+  }
+  @include when(small) {
+    @include e(icon) {
+      width: 14px;
+      height: 14px;
+    }
+    @include e(line){
+      top: 7px;
+    }
+    @include when(vertical){
+      @include e(line) {
+        left: 6px;
+      }
+    }
+    @include e(head) {
+      @include when(finish) {
+        @include e(icon){
+          background: var(--el-color-primary);
+        }
+      }
+      @include when(success) {
+        @include e(icon) {
+          background: var(--el-color-success);
+        }
+      }
+      @include when(error) {
+        @include e(icon) {
+          background: var(--el-color-danger);
+        }
       }
     }
   }
